<resources>
    <string name="app_name">You Can</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="track_activity">Track Your Activity</string>
    <string name="track_activity_content">Get fitter,stronger and embrace a healthier lifestyle. </string>
    <string name="invite_your_friend">Invite Your Friend</string>
    <string name="invite_your_friend_content">Share the application with your friend and start Running Now.</string>
    <string name="consult_doctor">Consult Doctor</string>
    <string name="consult_doctor_content">Receive daily tips from experts and chatting with them.</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="or">Or</string>
    <string name="new_user">New User ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="otp_description">OTP will be send to the entered mobile number</string>
    <string name="continues">Continue</string>
    <string name="emptymobilenumber">Enter your mobile number</string>
    <string name="verification">Verification</string>
    <string name="verification_description">Enter your OTP code here</string>
    <string name="verify_now">Verify now</string>
    <string name="resnd_otp">Resend OTP</string>
    <string name="resend_description">Please recheck your phone number for  resending the code</string>
    <string name="resend">Resend</string>
    <string name="lets_start">Amazing, let’s begin!</string>
    <string name="lets_start_description">we just need to ask you simple question to figure out the right plan for you</string>
    <string name="start_now">Start now</string>
    <string name="how_should_we_call_you">How should we call you?</string>
    <string name="how_should_we_call_you_description">You can choose whatever name you want.  We’ll keep it beteween you and us.</string>
    <string name="my_name_is">My name is</string>
    <string name="identification">How do you identify  yourself?</string>
    <string name="identification_description">We ask this to make sure your discovery is fun, healthy and balanced.</string>
    <string name="male">🧑Male</string>
    <string name="female">👩Female</string>
    <string name="select_gender">Select gender</string>
    <string name="challenge">let us know what\'s your challenge?</string>
    <string name="challenge_description">you can check this later</string>
    <string name="weight_loss">Weight Loss</string>
    <string name="weight_gain">Weight Gain</string>
    <string name="stay_hydrated">Stay Hydrated</string>
    <string name="stay_healthy">Stay Healthy</string>
    <string name="cm">cm</string>
    <string name="height">How tall are you?</string>
    <string name="height_description">This helps us to define your body shape and calibrate your plan</string>
    <string name="kg">Kg</string>
    <string name="weight">How much do you weight?</string>
    <string name="weight_description">This helps us to determine your bmi  ( body mass index) .</string>
    <string name="goal_weight">What is your weight goal?</string>
    <string name="goal_weight_description1">Select your ideal weight goal.</string>
    <string name="goal_weight_description2">Based on your BMI we suggest</string>
    <string name="suggested">Suggested</string>
    <string name="select_challenge">Select your purpose</string>
    <string name="finish">\t Wohoo 🎉 \n Now let’s get you move in’</string>
    <string name="finish_description">have fun and get fit!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="profile">profile</string>
    <string name="notification">Notifications</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_mygoals">My Goal</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="hello">Hello,</string>
    <string name="you_walked">you walked </string>
    <string name="main_goal">Main Goal</string>
    <string name="state">State</string>
    <string name="edit">Edit</string>
    <string name="currentbmi">your current BMI</string>
    <string name="daily_goals">Daily Goals</string>
    <string name="min">Min</string>
    <string name="goals"> Of Goals</string>
    <string name="topics_for_you">Topics for you</string>
    <string name="nutrition">Nutrition</string>
    <string name="home_gym">Home Gym</string>
    <string name="recipes">Recipes</string>
    <string name="discover">Discover</string>
    <string name="see_all">See All</string>
    <string name="health_calculator">Health Calculator</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="week">Week</string>
    <string name="day">,Day</string>
    <string name="today">Today.</string>
    <string name="dailyview">Daily View</string>
    <string name="weekview">Week view</string>
    <string name="monthview">Month View</string>
    <string name="performance">Performance</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="f">F</string>
    <string name="calories">Calories</string>
    <string name="kcal">Cal</string>
    <string name="weight_txt">Weight</string>
    <string name="increase">increase</string>
    <string name="steps">Steps</string>
    <string name="water">Water</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="bpm">BPM</string>
    <string name="week_average">Week Average</string>
    <string name="last_week">Last Week</string>
    <string name="total_steps">Total Steps</string>
    <string name="activity">Activity</string>
    <string name="month_average">Month Average</string>
    <string name="last_month">Last Month</string>
    <string name="events">Events</string>
    <string name="challenges">Challenge</string>
    <string name="Left">Left</string>
    <string name="gained">Gained</string>
    <string name="fat">Fat</string>
    <string name="gm">gm</string>
    <string name="carbs">carbs</string>
    <string name="burned">Burned</string>
    <string name="protien">Protien</string>
    <string name="querystring">Search For Meal</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="snacks">Snacks</string>
    <string name="dinner">Dinner</string>
    <string name="meal">Meal</string>
    <string name="meal_name">Meal Name</string>
    <string name="fatgm">Fat(gm)</string>
    <string name="protiengm">Protien(gm)</string>
    <string name="carbsgm">Carbs(gm)</string>
    <string name="serving">Serving</string>
    <string name="submit">Submit</string>
    <string name="ingredient">Ingredient</string>
    <string name="num_serving">Number of servings</string>
    <string name="add_as">Add As</string>
    <string name="km">Km</string>
    <string name="pause">Pause</string>
    <string-array name="main_meals">
        <item>@string/breakfast</item>
        <item>@string/lunch</item>
        <item>@string/snacks</item>
        <item>@string/dinner</item>
    </string-array>
    <string-array name="gender">
        <item>👩 Female</item>
        <item>🧑 Male</item>

    </string-array>
    <string name="facebook_application_id">742547189579493</string>
    <string name="fb_login_protocol_scheme">fb742547189579493</string>
    <string name="ml">ml</string>
    <string name="starting_weight">Current Weight</string>
</resources>
