<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_should_we_call_you"
        android:textSize="18dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#233249"
        android:layout_marginTop="80dp"
        android:padding="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_should_we_call_you_description"
        android:textSize="14dp"
        android:gravity="center"
        android:textColor="#9EA1A7"
        />
    <EditText
        android:id="@+id/name_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:inputType="text"
        android:background="@drawable/edit_text_background"
        android:textSize="18sp"
        android:padding="10dp"
        android:hint="@string/my_name_is"
        />
    <Button
        android:onClick="nextQuestion"
        android:id="@+id/question1_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:background="@drawable/login_button_background"
        android:text="@string/continues"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18dp"
        android:textStyle="bold"/>

</LinearLayout>