<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/identification"
        android:textSize="18dp"
        android:maxEms="10"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:textColor="#233249"
        android:layout_marginTop="55dp"
        android:padding="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/identification_description"
        android:textSize="14dp"
        android:gravity="center"
        android:maxEms="20"
        android:layout_gravity="center_horizontal"

        android:textColor="#9EA1A7" />
    <RadioGroup
        android:id="@+id/gender_radio_group"
        android:layout_marginTop="36dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <RadioButton
            android:id="@+id/male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:gravity="center"
            android:textSize="14sp"
            android:padding="15dp"
            android:textColor="@color/color_selector"
            android:layout_gravity="center"
            android:background="@drawable/radio_button_background"
            android:button="@drawable/radio_button_background" />
        <RadioButton
            android:id="@+id/female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:gravity="center"
            android:textSize="14sp"
            android:padding="15dp"
            android:textColor="@color/color_selector"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"
            android:background="@drawable/radio_button_background"
            android:button="@drawable/radio_button_background"/>
    </RadioGroup>
    <Button
        android:id="@+id/question2_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:background="@drawable/login_button_background"
        android:text="@string/continues"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18dp"
        android:textStyle="bold"/>

</LinearLayout>