<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.signup.signupfragment.MobileNumberSignUpFragment"
    android:gravity="center_horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logoname"
        android:layout_marginTop="130dp"/>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/verification"
        android:textColor="#274461"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="center"
        android:text="@string/verification_description"
        android:textColor="#274461"
        android:textSize="14sp"
        />

    <com.alimuzaffar.lib.pin.PinEntryEditText
        android:id="@+id/txt_pin_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:cursorVisible="false"
        app:pinTextBottomPadding="20dp"
       android:maxLength="6"
        />
    <Button
        android:id="@+id/verify_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@drawable/login_button_background"
        android:text="@string/verify_now"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pin_entry" />

    <TextView
        android:layout_gravity="start"
        android:id="@+id/resend_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/resnd_otp"
        android:textColor="#DE3F47"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/verify_btn"
        app:layout_constraintTop_toBottomOf="@+id/verify_btn" />


</LinearLayout>