<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"

    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="#274461"
        android:text="@string/meal_name"
        android:layout_marginTop="40dp"/>
    <EditText
        android:id="@+id/meal_name_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:textSize="16sp"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:inputType="text"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="#274461"
            android:text="@string/kcal"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="#274461"
            android:text="@string/fatgm"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/calories_edt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:textSize="16sp" android:layout_marginEnd="10dp"
            android:padding="10dp"

            android:inputType="number"/>
        <EditText
            android:id="@+id/fat_edt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:textSize="16sp"
            android:padding="10dp"
            android:inputType="number"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="#274461"
            android:text="@string/protiengm"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="#274461"
            android:text="@string/carbsgm"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/protien_edt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:textSize="16sp"
            android:padding="10dp"
            android:layout_marginEnd="10dp"
            android:inputType="number"/>
        <EditText
            android:id="@+id/carbs_edt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:textSize="16sp"
            android:padding="10dp"
            android:inputType="number"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="#274461"
        android:text="@string/serving"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/serving_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:textSize="16sp"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="35dp"
        android:inputType="number"
        />
    <Button
        android:textAllCaps="false"
        android:textSize="18dp"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:layout_marginBottom="10dp"
        android:id="@+id/add_maunal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button_background"/>
</LinearLayout>