<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:paddingRight="16dp"
    android:paddingLeft="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="#274461"
        android:text="@string/ingredient"
        android:layout_marginTop="40dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/recipe_ingredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="#4a4444"
            tools:text="2 large egg"
            android:layout_marginVertical="16dp"
            />
    </ScrollView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="#274461"
        android:text="@string/num_serving"
        />
    <TextView
        android:id="@+id/recipe_serving"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="#4a4444"
        tools:text="10"
        android:layout_marginVertical="16dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="#274461"
            android:text="@string/add_as"
            />
        <Spinner
            android:id="@+id/recipe_type_spinner"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:entries="@array/main_meals"
            >
        </Spinner>
    </LinearLayout>
    <Button
        android:textAllCaps="false"
        android:textSize="18dp"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:layout_marginBottom="10dp"
        android:id="@+id/recipe_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button_background"/>
</LinearLayout>