<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Views.signup.signupfragment.MobileNumberSignUpFragment"
    android:orientation="vertical"
    android:padding="16dp">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logoname"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="130dp"/>



    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/mobile_number"
        android:textColor="#DE3F47"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="12"
        android:gravity="center"
        android:text="@string/otp_description"
        android:textColor="#274461"
        android:textSize="14sp"
        android:layout_gravity="center_horizontal" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text_background"
        android:padding="5dp">
        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:ccp_showNameCode="false"
            app:ccp_arrowColor="#8B8888"
            app:ccpDialog_initialScrollToSelection="false"
            app:ccpDialog_keyboardAutoPopup="false"
            app:ccpDialog_showCloseIcon="true"
            app:ccpDialog_showNameCode="true"
            app:ccp_autoFormatNumber="false"
            app:ccp_countryPreference="ps,sa" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="#ACA8A8" />
        <EditText
            android:id="@+id/editText_carrierNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="phone"
            android:padding="5dp"
            android:singleLine="true" />
    </LinearLayout>

    <Button
        android:id="@+id/continue_tbn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@drawable/login_button_background"
        android:text="@string/continues"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18dp"
        android:textStyle="bold" />




</LinearLayout>